* Use force-stop and force-restart in uvmmd-initscript to support blocked processes (Bug #34321)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48485 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-daemon (3.0.17-6) unstable; urgency=low
+
+  * Use force-stop and force-restart in uvmmd-initscript to support blocked
+    processes (Bug #34321)
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 13 Mar 2014 11:07:23 +0100
+
 univention-virtual-machine-manager-daemon (3.0.17-5) unstable; urgency=low
 
   * Set title on noVNC to VM name and host (Bug #33164)
