* Added a reconnect mechanism to univention-ldapsearch if the LDAP   server is not available (Bug #34293)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48490 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,10 @@
+univention-config-registry (9.0.6-8) unstable; urgency=low
+
+  * Added a reconnect mechanism to univention-ldapsearch if the LDAP
+    server is not available (Bug #34293)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 11:36:15 +0100
+
 univention-config-registry (9.0.6-7) unstable; urgency=low
 
   * template-check: Work-around missing debian.deb822 (Bug #24010)
