--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-6) unstable; urgency=low
+
+  * 10_ldap/ldap_extension_utils.py: retry if server is currently not
+    available (Bug #34338)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 12:16:31 +0100
+
 ucs-test (4.0.164-5) unstable; urgency=low
 
   * 10_ldap/28reconnect_univention-ldapsearch: added test case for
