* Cleanup ldap/client/retry/count handling (Bug #34292)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48498 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-python/debian/changelog
+++ b/base/univention-python/debian/changelog
@@ -1,3 +1,9 @@
+univention-python (7.0.3-3) unstable; urgency=low
+
+  * Cleanup ldap/client/retry/count handling (Bug #34292)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 12:27:33 +0100
+
 univention-python (7.0.3-2) unstable; urgency=low
 
   * Added ldap/client/retry/count UCR variable which defines how often
