Bug #34336: ucs-ec2-test: Fix utils.sh
Rename upgrade_to_3.2 to upgrade_to_testing.
Make sure latest ucs-test repository is used.

Declare variables function local.
Add quoting.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48500 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.17-1) unstable; urgency=low
+
+  * Fix utils.sh (Bug #34336)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 13 Mar 2014 12:03:44 +0100
+
 ucs-ec2-tools (0.1.16-1) unstable; urgency=low
 
   * Increase the timeout to 1200 seconds while waiting for the EC2
