Bug #32799: ec2-test: Re-add APP_ID to install_apps_test_package
Lost in translation to utils.sh by r46865.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48502 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.17-2) unstable; urgency=low
+
+  * Add missing APP_ID to install_apps_test_packages (Bug #32799)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 13 Mar 2014 14:10:01 +0100
+
 ucs-ec2-tools (0.1.17-1) unstable; urgency=low
 
   * Fix utils.sh (Bug #34336)
