--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.16-2) unstable; urgency=low
+
+  * Add missing APP_ID to install_apps_test_packages (Bug #32799)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 13 Mar 2014 14:09:09 +0100
+
 ucs-ec2-tools (0.1.16-1) unstable; urgency=low
 
   * Increase the timeout to 1200 seconds while waiting for the EC2
