--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-7) unstable; urgency=low
+
+  * 10_ldap/*reconnect*: don't test on a memberserver (Bug #34292 and
+    Bug #34293)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 15:24:09 +0100
+
 ucs-test (4.0.164-6) unstable; urgency=low
 
   * 10_ldap/ldap_extension_utils.py: retry if server is currently not
