--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,10 @@
+univention-base-files (3.0.4-6) unstable; urgency=low
+
+  * Set the default for ldap/client/retry/count to 10
+    (Bug #34292 and Bug #34293)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 16:11:09 +0100
+
 univention-base-files (3.0.4-5) unstable; urgency=low
 
   * Added UCR variable descrption for ldap/client/retry/count to
