* Set the default for ldap/client/retry/count to 10 (Bug #34292)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48520 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-python/debian/changelog
+++ b/base/univention-python/debian/changelog
@@ -1,3 +1,9 @@
+univention-python (7.0.3-4) unstable; urgency=low
+
+  * Set the default for ldap/client/retry/count to 10 (Bug #34292)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 16:12:00 +0100
+
 univention-python (7.0.3-3) unstable; urgency=low
 
   * Cleanup ldap/client/retry/count handling (Bug #34292)
