--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-9) unstable; urgency=low
+
+  * Set the default for ldap/client/retry/count to 10 (Bug #34293)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 16:12:29 +0100
+
 univention-config-registry (9.0.6-8) unstable; urgency=low
 
   * Added a reconnect mechanism to univention-ldapsearch if the LDAP
