--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,10 @@
+univention-mail-postfix (8.0.11-1) unstable; urgency=low
+
+  * added mail/postfix/ldaptable/starttls to configure
+    if start_tls should be uses in ldap lookups (Bug #34198) 
+
+ -- Felix Botner <botner@univention.de>  Thu, 13 Mar 2014 16:41:03 +0100
+
 univention-mail-postfix (8.0.10-3) unstable; urgency=low
 
   * use user listfilter for listfilter postfix policy (Bug #26910) 
