* Activate vfs_dfs_samba4 on sysvol and netlogon (Bug #34326) * Set samba/enable-msdfs?yes by default and =yes for this update
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48538 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-17) unstable; urgency=medium
+
+  * Activate vfs_dfs_samba4 on sysvol and netlogon (Bug #34326)
+  * Set samba/enable-msdfs?yes by default and =yes for this update
+
+ -- Arvid Requate <requate@univention.de>  Thu, 13 Mar 2014 18:51:43 +0100
+
 univention-samba4 (3.0.39-16) unstable; urgency=medium
 
   * Terminate option parsing in samba-tool user add call (Bug #32938)
