--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,10 @@
+univention-base-files (3.0.4-7) unstable; urgency=low
+
+  * Adjust description for ldap/client/retry/count
+    (Bug #34292 and Bug #34293)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 14 Mar 2014 07:06:34 +0100
+
 univention-base-files (3.0.4-6) unstable; urgency=low
 
   * Set the default for ldap/client/retry/count to 10
