--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.32-4) unstable; urgency=low
+
+  * Fixed typos in base system warning (Bug #34329)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 14 Mar 2014 08:26:36 +0100
+
 univention-installer (9.0.32-3) unstable; urgency=low
 
   * Display the EFI / biosgrub warning again after re-changing the
