Fixed another typo in the german translation (Bug #34334)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48545 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/installer/locale/de/LC_MESSAGES/installer.po
+++ b/base/univention-installer/installer/locale/de/LC_MESSAGES/installer.po
@@ -2256,7 +2256,7 @@ msgstr "installierte System ist ggf. nicht bootbar."
 #: installer/modules/66_gpt_partition.py:703
 #: installer/modules/66_gpt_partition.py:716
 msgid "A BIOS boot partition is missing in your selected"
-msgstr "Die gewünschte Parititionierung enthält keine"
+msgstr "Die gewünschte Partitionierung enthält keine"
 
 #: installer/modules/66_gpt_partition.py:704
 msgid "partition setup. Your installation may not be bootable"
