Fixed another typo in the german translation (Bug #34334)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48546 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.32-5) unstable; urgency=low
+
+  * Fixed another typo in the german translation (Bug #34334)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 14 Mar 2014 09:32:14 +0100
+
 univention-installer (9.0.32-4) unstable; urgency=low
 
   * Fixed typos in base system warning (Bug #34329)
