* 10_ldap/74schema_update: remove some sleeps from the test case. I   think it should be work without theses sleeps (Bug #34338)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48557 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-8) unstable; urgency=low
+
+  * 10_ldap/74schema_update: remove some sleeps from the test case. I
+    think it should be work without theses sleeps (Bug #34338)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 14 Mar 2014 13:56:05 +0100
+
 ucs-test (4.0.164-7) unstable; urgency=low
 
   * 10_ldap/*reconnect*: don't test on a memberserver (Bug #34292 and
