--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,10 @@
+univention-mail-cyrus (6.0.6-1) unstable; urgency=low
+
+  * honour mail/cyrus/mailbox/delete when removing
+    shared folders (Bug #34165) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 14 Mar 2014 16:07:32 +0100
+
 univention-mail-cyrus (6.0.5-5) unstable; urgency=low
 
   * fixed UCR variable descriptions (Bug #28123) 
