* 50_samba/41password_change: fixed command calls, it must be 'net rpc   user' and 'net ads' (Bug #34350)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48569 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-10) unstable; urgency=low
+
+  * 50_samba/41password_change: fixed command calls, it must be 'net rpc
+    user' and 'net ads' (Bug #34350)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 17 Mar 2014 10:55:54 +0100
+
 ucs-test (4.0.164-9) unstable; urgency=low
 
   * Bug #34343: added test case for detecting whether apps can be installed
