--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.6-1) unstable; urgency=low
+
+  * use /var/run/nagios/nrpe.pid as PID file for nrpe server (Bug #34063) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 17 Mar 2014 11:12:08 +0100
+
 univention-nagios (7.0.5-8) unstable; urgency=medium
 
   * Fix access-nagios.conf (Bug #33646)
