fixed init script for nrpe server (Bug #34063)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48584 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/changelog
+++ b/nagios/univention-nagios/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios (7.0.6-2) unstable; urgency=low
+
+  * fixed init script for nrpe server (Bug #34063) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 17 Mar 2014 14:18:52 +0100
+
 univention-nagios (7.0.6-1) unstable; urgency=low
 
   * use /var/run/nagios/nrpe.pid as PID file for nrpe server (Bug #34063) 
