fixed check_smart_suidwrapper.c (Bug #34041)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48585 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios-smart/debian/changelog
+++ b/nagios/univention-nagios-smart/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios-smart (3.0.2-1) unstable; urgency=low
+
+  * fixed check_smart_suidwrapper.c (Bug #34041)
+
+ -- Felix Botner <botner@univention.de>  Mon, 17 Mar 2014 14:19:50 +0100
+
 univention-nagios-smart (3.0.1-1) unstable; urgency=low
 
   * abort join script on failing udm call (Bug #27753)
