* Bug #31324: added test cases for s4 connector sync of modified users/groups * Bug #31792: added test case to check if packages of installed appcenter apps are available for i386 architecture
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48595 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,13 @@
+ucs-test (4.0.164-11) unstable; urgency=low
+
+  * Bug #31324: added test cases for s4 connector sync of modified users /
+    groups
+  
+  * Bug #31792: added test case to check if packages of installed appcenter
+    apps are available for i386 architecture
+
+ -- Drees Dormann <ddormann@fabler.knut.univention.de>  Mon, 17 Mar 2014 16:22:52 +0100
+
 ucs-test (4.0.164-10) unstable; urgency=low
 
   * 50_samba/41password_change: fixed command calls, it must be 'net rpc
