* Bug #34343: print more information for broken apps
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48608 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,8 +1,13 @@
+ucs-test (4.0.164-12) unstable; urgency=low
+
+  * Bug #34343: print more information for broken apps
+
+ -- Alexander Kläser <klaeser@univention.de>  Tue, 18 Mar 2014 12:33:27 +0100
+
 ucs-test (4.0.164-11) unstable; urgency=low
 
   * Bug #31324: added test cases for s4 connector sync of modified users /
     groups
-  
   * Bug #31792: added test case to check if packages of installed appcenter
     apps are available for i386 architecture
 
