* Bug #34343: fixed typo
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48626 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-13) unstable; urgency=low
+
+  * Bug #34343: fixed typo
+
+ -- Alexander Kläser <klaeser@univention.de>  Wed, 19 Mar 2014 10:48:02 +0100
+
 ucs-test (4.0.164-12) unstable; urgency=low
 
   * Bug #34343: print more information for broken apps
