firefox-de (1:24.4.0esr-3) unstable; urgency=low
  * Update to Firefox 24.4 ESR (Bug #34365)

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@48628 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/desktop/firefox-de/debian/changelog
+++ b/desktop/firefox-de/debian/changelog
@@ -1,3 +1,9 @@
+firefox-de (1:24.4.0esr-3) unstable; urgency=low
+
+  * Update to Firefox 24.4 ESR (Bug #34365)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 19 Mar 2014 11:39:24 +0100
+
 firefox-de (1:24.3.0esr-3) unstable; urgency=low
 
   * Update to Firefox 24.3 ESR (Bug #34051)
