--- a/desktop/firefox-en/debian/changelog
+++ b/desktop/firefox-en/debian/changelog
@@ -1,3 +1,9 @@
+firefox-en (1:24.4.0esr-6) unstable; urgency=low
+
+  * Update to Firefox 24.4 ESR (Bug #34366)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Wed, 19 Mar 2014 11:42:50 +0100
+
 firefox-en (1:24.3.0esr-6) unstable; urgency=low
 
   * Update to Firefox 24.3 ESR (Bug #34052)
