--- a/nagios/univention-nagios-smart/debian/changelog
+++ b/nagios/univention-nagios-smart/debian/changelog
@@ -1,3 +1,9 @@
+univention-nagios-smart (3.0.2-2) unstable; urgency=low
+
+  * fixed check_smart_suidwrapper.c (Bug #34041) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 19 Mar 2014 12:16:46 +0100
+
 univention-nagios-smart (3.0.2-1) unstable; urgency=low
 
   * fixed check_smart_suidwrapper.c (Bug #34041)
