Use shuitl.move instead of os.rename in ldap_extension.py to support different partitions for src and dest (Bug #34104)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48635 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,10 @@
+univention-lib (3.0.26-18) unstable; urgency=low
+
+  * Use shuitl.move instead of os.rename in ldap_extension.py
+    to support different partitions for src and dest (Bug #34104)
+
+ -- Felix Botner <botner@univention.de>  Wed, 19 Mar 2014 13:14:13 +0100
+
 univention-lib (3.0.26-17) unstable; urgency=medium
 
   * bash fix (Bug #33582)
