* Add diff mode for modifications from UCS to S4 (Bug #33621)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48656 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-s4-connector/debian/changelog
+++ b/services/univention-s4-connector/debian/changelog
@@ -3,8 +3,9 @@ univention-s4-connector (8.0.33-32) unstable; urgency=low
   * Remove the internal dn_list which has been used to detect mutli
     object changes. This is required for the switch from object based
     sync to diff based sync (Bug #33621)
+  * Add diff mode for modifications from UCS to S4 (Bug #33621)
 
- -- Stefan Gohmann <gohmann@univention.de>  Thu, 20 Mar 2014 12:08:47 +0100
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 20 Mar 2014 14:23:23 +0100
 
 univention-s4-connector (8.0.33-31) unstable; urgency=medium
 
