* Bug #34320: Added sanity check whether server meets app's SupportedArchitectures
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48669 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.51-7) unstable; urgency=low
+
+  * Bug #34320: Added sanity check whether server meets app's
+    SupportedArchitectures
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 20 Mar 2014 21:56:31 +0100
+
 univention-management-console-module-appcenter (3.0.51-6) unstable; urgency=low
 
   * Bug #34278: Do an apt-get update before installing default packages of a
