* Bug #34005: Set Apache's ProxyTimeout to the UCR variable umc/http/session/timeout
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48672 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-24) unstable; urgency=low
+
+  * Bug #34005: Set Apache's ProxyTimeout to the UCR variable
+    umc/http/session/timeout
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Thu, 20 Mar 2014 22:16:20 +0100
+
 univention-management-console-frontend (3.0.152-23) unstable; urgency=low
 
   * Bug #34288: Implement method for retrieval of own IP address in
