Bug #31792: adjusted style for test 20/43_installed_apps_*, test now is architecture independent, respect appcenter blacklisting
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48685 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.164-14) unstable; urgency=low
+
+  * Bug #31792: adjusted style for test 20/43_installed_apps_*, test now is
+    architecture independent, respect appcenter blacklisting
+
+ -- Drees Dormann <ddormann@univention.de>  Fri, 21 Mar 2014 12:49:00 +0100
+
 ucs-test (4.0.164-13) unstable; urgency=low
 
   * Bug #34343: fixed typo
