* Bug #33728: Fix version mentioned in postinst version for renaming tine20org
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48700 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.51-8) unstable; urgency=low
+
+  * Bug #33728: Fix version mentioned in postinst version for renaming
+    tine20org
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 21 Mar 2014 13:23:08 +0100
+
 univention-management-console-module-appcenter (3.0.51-7) unstable; urgency=low
 
   * Bug #34320: Added sanity check whether server meets app's
