--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-15) unstable; urgency=low
+
+  * Bug #31792: small fixes in test 20/43
+
+ -- Drees Dormann <dormann@univention.de>  Fri, 21 Mar 2014 15:10:06 +0100
+
 ucs-test (4.0.164-14) unstable; urgency=low
 
   * Bug #31792: adjusted style for test 20/43_installed_apps_*, test now is
