--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-16) unstable; urgency=low
+
+  * Bug #34343: explicitely check for conflicting system packages
+
+ -- Alexander Kläser <klaeser@univention.de>  Mon, 24 Mar 2014 11:18:44 +0100
+
 ucs-test (4.0.164-15) unstable; urgency=low
 
   * Bug #31792: small fixes in test 20/43
