--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.39-18) unstable; urgency=low
+
+  * Added univention-samba4-backup (Bug #34113) 
+
+ -- Felix Botner <botner@univention.de>  Wed, 26 Mar 2014 16:58:10 +0100
+
 univention-samba4 (3.0.39-17) unstable; urgency=medium
 
   * Activate vfs_dfs_samba4 on sysvol and netlogon (Bug #34326)
