--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-17) unstable; urgency=low
+
+  * Bug #34395: added test script for "functional" users
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Thu, 27 Mar 2014 17:10:16 +0100
+
 ucs-test (4.0.164-16) unstable; urgency=low
 
   * Bug #34343: explicitely check for conflicting system packages
