* Raise samba/debug/level also on s4 master for Bug #33904
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48878 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/debian/changelog
+++ b/test/ucs-ec2-tools/debian/changelog
@@ -1,3 +1,9 @@
+ucs-ec2-tools (0.1.18-1) unstable; urgency=medium
+
+  * Raise samba/debug/level also on s4 master for Bug #33904
+
+ -- Arvid Requate <requate@univention.de>  Fri, 28 Mar 2014 17:48:11 +0100
+
 ucs-ec2-tools (0.1.17-2) unstable; urgency=low
 
   * Add missing APP_ID to install_apps_test_packages (Bug #32799)
