Bug #33444 UVMM/Doc: Update URL to network bridge configuration
Move UVMM/Bridge configuration from extended documentation to main
manual: The primary part about disabling the UVMM scripts is added to
the section about configuring Bridges/Bonding/VLANs, while the second
part is added to the UVMM chapter as a new section describing UVMM
profiles.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48889 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-node (2.0.5-5) unstable; urgency=low
+
+  * Update URL to network bridge configuration (Bug #33444)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 31 Mar 2014 10:53:05 +0200
+
 univention-virtual-machine-manager-node (2.0.5-4) unstable; urgency=low
 
   * Add libvirt-check.sh to virtualization nodes. It periodically tests if
