Bug #34425: Update URL to network configuration
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48898 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.17-7) unstable; urgency=low
+
+  * Update URL to network bridge configuration (Bug #34425)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 31 Mar 2014 11:55:40 +0200
+
 univention-virtual-machine-manager-daemon (3.0.17-6) unstable; urgency=low
 
   * Use force-stop and force-restart in uvmmd-initscript to support blocked
