* Added libvirtd logging functionality with new UCR variables: libvirt/log/level, libvirt/log/filters, libvirt/log/outputs (Bug #34170)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48929 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,10 @@
+univention-virtual-machine-manager-node (2.0.5-6) unstable; urgency=low
+
+  * Added libvirtd logging functionality with new UCR variables:
+    libvirt/log/level, libvirt/log/filters, libvirt/log/outputs (Bug #34170)
+
+ -- Erik Damrose <damrose@univention.de>  Tue, 01 Apr 2014 11:06:48 +0200
+
 univention-virtual-machine-manager-node (2.0.5-5) unstable; urgency=low
 
   * Update URL to network bridge configuration (Bug #33444)
