--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-18) unstable; urgency=medium
+
+  * Add 72_udm-extensions/43_test_update-python-modules (Bug #34421)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 02 Apr 2014 13:53:31 +0200
+
 ucs-test (4.0.164-17) unstable; urgency=low
 
   * Bug #34395: added test script for "functional" users
