--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-15) unstable; urgency=medium
+
+  * import license_check to fix unused undefined function calls (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 02 Apr 2014 14:04:56 +0200
+
 univention-management-console-module-adtakeover (1.0.10-14) unstable; urgency=medium
 
   * Cleanup timer development code (Bug #34139)
