Revert "Revert "Bug #34425: Update URL to network configuration""
This reverts commit d66723733574bcb7bb9353ccc056b4a6a6caef08.

Also fix link to German manual, which uses two '::' to separate section
names.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48997 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-daemon/umc/js/de.po
+++ b/virtualization/univention-virtual-machine-manager-daemon/umc/js/de.po
@@ -1167,8 +1167,8 @@ msgid ""
 "such an interface the network configuration of the UVMM node needs to be "
 "modified. This is done automatically by the UVMM service when starting the "
 "virtual machine. Further details about the network configuration can be "
-"found in <a target=\"_blank\" href=\"http://sdb.univention.de/1172\">this "
-"article</a>."
+"found in <a target=\"_blank\" href=\"http://docs.univention.de/manual-3.2."
+"html#uvmm:networkinterfaces\">the manual</a>."
 msgstr ""
 "Zwei Typen von Netzwerkschnittstellen werden unterstützt. Der erste Typ "
 "<i>Bridge</i> benötigt eine statische Netzwerkverbindung auf dem "
@@ -1182,8 +1182,9 @@ msgstr ""
 "wie beispielsweise Notebooks geeignet. Für solch eine Netzwerkschnittstelle "
 "muß die Netzwerkkonfiguration des UVMM Servers angepasst werden. Dies wird "
 "automatisch durch den UVMM-Dienst vorgenommen, wenn die Maschine gestartet "
-"wird. Weitere Details zur Netzwerkkonfiguration sind in <a href=\"http://sdb."
-"univention.de/1172\" target=\"_blank\">diesem Artikel</a> zu finden."
+"wird. Weitere Details zur Netzwerkkonfiguration sind <a href=\"http://docs."
+"univention.de/handbuch-3.2.html#uvmm::networkinterfaces\" "
+"target=\"_blank\">im Handbuch</a> zu finden."
 
 #: umc/js/uvmm/InterfaceGrid.js:59 umc/js/uvmm/InterfaceWizard.js:57
 #: umc/js/uvmm/DriveGrid.js:69
