--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.17-9) unstable; urgency=low
+
+  * Revert the revert (Bug #34425)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 03 Apr 2014 08:31:00 +0200
+
 univention-virtual-machine-manager-daemon (3.0.17-8) unstable; urgency=low
 
   * Revert URL change until new manual is published (Bug #34425)
