Bug #33444 UVMM: Revert URL update until new manual is published
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48998 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/virtualization/univention-virtual-machine-manager-node/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-node/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-node (2.0.5-8) unstable; urgency=low
+
+  * Revert URL update until new manual is published (Bug #33444)
+
+ -- Philipp Hahn <hahn@univention.de>  Thu, 03 Apr 2014 08:37:07 +0200
+
 univention-virtual-machine-manager-node (2.0.5-7) unstable; urgency=low
 
   * Added libvirtd logging functionality with new UCR variables:
