* Bug #33990: update to Dojo 1.9.3
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@49012 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-dojo/debian/changelog
+++ b/management/univention-dojo/debian/changelog
@@ -1,3 +1,9 @@
+univention-dojo (7.0.6-2) unstable; urgency=low
+
+  * Bug #33990: update to Dojo 1.9.3
+
+ -- Florian Best <best@univention.de>  Thu, 03 Apr 2014 11:09:56 +0200
+
 univention-dojo (7.0.6-1) unstable; urgency=low
 
   * Bug #32972: imported new version of put-selector
